--- a/rmarkdown/rmarkdown-accessible.qmd
+++ b/rmarkdown/rmarkdown-accessible.qmd
@@ -37,7 +37,7 @@ execute:
 
 ### Source Editor
 
-![](rmarkdown-images/rmarkdown-images/source-editor.png){fig-align="center"}
+![](images/source-editor.png){fig-align="center"}
 
 ::: {.callout-note appearance="minimal" icon="false" collapse="true"}
 ## Expand to read about the features in the Source Editor {aria-hidden="true"}
@@ -64,7 +64,7 @@ Features within the Source Editor
 
 ### Visual Editor
 
-![](rmarkdown-images/visual-editor.png){fig-align="center"}
+![](images/visual-editor.png){fig-align="center"}
 
 ::: {.callout-note appearance="minimal" icon="false" collapse="true"}
 ## Expand to read about the features in the Visual Editor {aria-hidden="true"}
@@ -79,7 +79,7 @@ Features within the Visual Editor
 
 ### Rendered Output
 
-![](rmarkdown-images/rendered-output.png){fig-align="center"}
+![](images/rendered-output.png){fig-align="center"}
 
 ::: {.callout-note appearance="minimal" icon="false" collapse="true"}
 ## Expand to read about the features in the Rendered Output Window {aria-hidden="true"}
@@ -211,153 +211,155 @@ Other table packages include **flextable**, **gt**, and **kableExtra**.
 
 The syntax on the left renders as the output on the right.
 
-+---------------------------------------------+---------------------------------------------------------------------------+
-| Markdown Syntax                             | Rendered Output                                                           |
-+=============================================+===========================================================================+
-| ```                                         | Plain text.                                                               |
-| Plain text.                                 |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | End a line with two spaces to                                             |
-| End a line with two spaces to               |                                                                           |
-| start a new paragraph.                      | start a new paragraph.                                                    |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | Also end a line with a backslash                                          |
-| Also end a line with a backslash\           |                                                                           |
-| to make a new line.                         | to make a new line.                                                       |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | *italics* and **bold**                                                    |
-| *italics* and **bold**                      |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | superscript^2^ /subscript~2~                                              |
-| superscript^2^/subscript~2~                 |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | ~~strike through~~                                                        |
-| ~~strike through~~                          |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | escaped: \* \_ \\                                                         |
-| escaped: \* \_ \\                           |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | en dash: --, em dash: ---                                                 |
-| en dash: --, em dash: ---                   |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | # Header 1                                                                |
-| # Header 1                                  |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | ## Header 2                                                               |
-| ## Header 2                                 |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | ...                                                                       |
-| ...                                         |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | ###### Header 6                                                           |
-| ###### Header 6                             |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | -   unordered list                                                        |
-| - unordered list                            |                                                                           |
-| - item 2                                    | -   item 2                                                                |
-|     - item 2a (indent 1 tab)                |                                                                           |
-|     - item 2b                               |     -   item 2a (indent 1 tab)                                            |
-| ```                                         |                                                                           |
-|                                             |     -   item 2b                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | 1.  ordered list                                                          |
-| 1. ordered list                             |                                                                           |
-| 2. item 2                                   | 2.  item 2                                                                |
-|   - item 2a (indent 1 tab)                  |                                                                           |
-|   - item 2b                                 |     -   item 2a                                                           |
-| ```                                         |                                                                           |
-|                                             |     -   item 2b                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | <https://posit.co/>                                                       |
-| <link url>                                  |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | [This is a link.](https://posit.co/)                                      |
-| [This is a link.](link url)                 |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | [This is another link.](https://posit.co/)                                |
-| [This is another link.][id].                |                                                                           |
-|                                             |                                                                           |
-| At the end of the document:                 |                                                                           |
-| [id]: link url                              |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | ![R Markdown logo](rmarkdown-images/rmarkdown-logo.png){alt="R Markdown logo" width="300"} |
-| ![Caption](image.png)                       |                                                                           |
-|                                             |                                                                           |
-| or                                          |                                                                           |
-|                                             |                                                                           |
-| ![Caption](id2)                             |                                                                           |
-|                                             |                                                                           |
-| At the end of the document include:         |                                                                           |
-| [id2]: image.png                            |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | `verbatim code`                                                           |
-| `verbatim code`                             |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ````                                        | ```                                                                       |
-| ```                                         | multiple lines                                                            |
-| multiple lines                              | of verbatim code                                                          |
-| of verbatim code                            | ```                                                                       |
-| ```                                         |                                                                           |
-| ````                                        |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | > block quotes                                                            |
-| > block quotes                              |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | equation: $e^{i \pi} + 1 = 0$                                             |
-| equation: $e^{i \pi} + 1 = 0$               |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | equation block:                                                           |
-| equation block:                             |                                                                           |
-| $$E = mc^{2}$$                              | $$                                                                        |
-| ```                                         | E = mc^{2}                                                                |
-|                                             | $$                                                                        |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | horizontal rule:                                                          |
-| horizontal rule:                            |                                                                           |
-| ---                                         | ------------------------------------------------------------------------  |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| ```                                         | | Right | Left | Default | Center |                                       |
-| |Right|Left|Default|Center|                 | |------:|:-----|---------|:------:|                                       |
-| |----:|:---|-------|:----:|                 | |    12 | 12   | 12      |   12   |                                       |
-| |12   |12  |12     |12    |                 | |   123 | 123  | 123     |  123   |                                       |
-| |123  |123 |123    |123   |                 | |     1 | 1    | 1       |   1    |                                       |
-| |1    |1   |1      |1     |                 |                                                                           |
-|                                             | : Caption text, example rendered table.                                   |
-| Table: Caption text, example rendered table |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
-| HTML Tabsets                                | ::: panel-tabset                                                          |
-|                                             | ## Plots                                                                  |
-| ```                                         |                                                                           |
-| ::: panel-tabset                            | text                                                                      |
-| ## Plots text                               |                                                                           |
-| text                                        | ## Tables                                                                 |
-|                                             |                                                                           |
-| ## Tables                                   | more text                                                                 |
-| more text                                   | :::                                                                       |
-| :::                                         |                                                                           |
-| ```                                         |                                                                           |
-+---------------------------------------------+---------------------------------------------------------------------------+
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| # Markdown Syntax                           | # Rendered Output                                                                 |
+|                                             |                                                                                   |
+| ```                                         | Plain text.                                                                       |
+| Plain text.                                 |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+|                                             |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | End a line with two spaces to                                                     |
+| End a line with two spaces to               |                                                                                   |
+| start a new paragraph.                      | start a new paragraph.                                                            |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | Also end a line with a backslash                                                  |
+| Also end a line with a backslash\           |                                                                                   |
+| to make a new line.                         | to make a new line.                                                               |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | *italics* and **bold**                                                            |
+| *italics* and **bold**                      |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | superscript^2^ /subscript~2~                                                      |
+| superscript^2^/subscript~2~                 |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | ~~strike through~~                                                                |
+| ~~strike through~~                          |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | escaped: \* \_ \\                                                                 |
+| escaped: \* \_ \\                           |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | en dash: --, em dash: ---                                                         |
+| en dash: --, em dash: ---                   |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | # Header 1                                                                        |
+| # Header 1                                  |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | ## Header 2                                                                       |
+| ## Header 2                                 |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | ...                                                                               |
+| ...                                         |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | ###### Header 6                                                                   |
+| ###### Header 6                             |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | -   unordered list                                                                |
+| - unordered list                            |                                                                                   |
+| - item 2                                    | -   item 2                                                                        |
+|     - item 2a (indent 1 tab)                |                                                                                   |
+|     - item 2b                               |     -   item 2a (indent 1 tab)                                                    |
+| ```                                         |                                                                                   |
+|                                             |     -   item 2b                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | 1.  ordered list                                                                  |
+| 1. ordered list                             |                                                                                   |
+| 2. item 2                                   | 2.  item 2                                                                        |
+|   - item 2a (indent 1 tab)                  |                                                                                   |
+|   - item 2b                                 |     -   item 2a                                                                   |
+| ```                                         |                                                                                   |
+|                                             |     -   item 2b                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | <https://posit.co/>                                                               |
+| <link url>                                  |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | [This is a link.](https://posit.co/)                                              |
+| [This is a link.](link url)                 |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | [This is another link.](https://posit.co/)                                        |
+| [This is another link.][id].                |                                                                                   |
+|                                             |                                                                                   |
+| At the end of the document:                 |                                                                                   |
+| [id]: link url                              |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | ![R Markdown logo](images/rmarkdown-logo.png){alt="R Markdown logo" width="300"}  |
+| ![Caption](image.png)                       |                                                                                   |
+|                                             |                                                                                   |
+| or                                          |                                                                                   |
+|                                             |                                                                                   |
+| ![Caption](id2)                             |                                                                                   |
+|                                             |                                                                                   |
+| At the end of the document include:         |                                                                                   |
+| [id2]: image.png                            |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | `verbatim code`                                                                   |
+| `verbatim code`                             |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ````                                        | ```                                                                               |
+| ```                                         | multiple lines                                                                    |
+| multiple lines                              | of verbatim code                                                                  |
+| of verbatim code                            | ```                                                                               |
+| ```                                         |                                                                                   |
+| ````                                        |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | > block quotes                                                                    |
+| > block quotes                              |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | equation: $e^{i \pi} + 1 = 0$                                                     |
+| equation: $e^{i \pi} + 1 = 0$               |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | equation block:                                                                   |
+| equation block:                             |                                                                                   |
+| $$E = mc^{2}$$                              | $$                                                                                |
+| ```                                         | E = mc^{2}                                                                        |
+|                                             | $$                                                                                |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | horizontal rule:                                                                  |
+| horizontal rule:                            |                                                                                   |
+| ---                                         | ------------------------------------------------------------------------          |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| ```                                         | | Right | Left | Default | Center |                                               |
+| |Right|Left|Default|Center|                 | |------:|:-----|---------|:------:|                                               |
+| |----:|:---|-------|:----:|                 | |    12 | 12   | 12      |   12   |                                               |
+| |12   |12  |12     |12    |                 | |   123 | 123  | 123     |  123   |                                               |
+| |123  |123 |123    |123   |                 | |     1 | 1    | 1       |   1    |                                               |
+| |1    |1   |1      |1     |                 |                                                                                   |
+|                                             | : Caption text, example rendered table.                                           |
+| Table: Caption text, example rendered table |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
+| HTML Tabsets                                | ::: panel-tabset                                                                  |
+|                                             | ## Plots                                                                          |
+| ```                                         |                                                                                   |
+| ::: panel-tabset                            | text                                                                              |
+| ## Plots text                               |                                                                                   |
+| text                                        | ## Tables                                                                         |
+|                                             |                                                                                   |
+| ## Tables                                   | more text                                                                         |
+| more text                                   | :::                                                                               |
+| :::                                         |                                                                                   |
+| ```                                         |                                                                                   |
++---------------------------------------------+-----------------------------------------------------------------------------------+
 
 : Table of markdown syntax and rendered examples. The syntax in the first column renders to the output in the second column.
 
